# System-And-Device-Programming-Project

./: .gitignore  Cargo.toml  README.md  config.yaml
log/: README.md
src/: backup.rs  beeper.rs  buttons_and_clicks_pattern_recognizer.rs  config.rs  lib.rs  logger.rs  main.rs  notification_popup.rs  pattern_recognizer.rs
