[package]
name = "group_39"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30.13"
chrono = "0.4.19"
rodio = "0.19.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_yaml = "0.9.33"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
native-dialog = "0.5.8"
rdev = "0.5.3"
emath = "0.28.1"
winapi = { version = "0.3.9", features = ["minwindef"] }
notify = "6.1.1"
notify-rust = "4.5.0"
async-recursion = "0.3"
x11 = "2.21.0"

[workspace]
membres= ["group_39"]